@@ -9,3 +9,4 @@ Código:
 	08/10/2022: imageFlipV agregado
 	09/10/2022: imageCrop agregado
 	10/10/2022: imageRGBToHex agregado
+	11/10/2022: IsCompress y Histogram agregados
